# ai-mcp-salesforce

./: .env.example  Dockerfile  README.md  pyproject.toml  requirements-runtime.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
config/: default.yaml
src/: main.py  salesforce_mcp_service.py  server.py
tests/: test_server.py
